# DepTR-MOT

./: .gitignore  README.md  environment.yml  evaluate_track_with_depth.py  img2video.py  test.py  update.txt
.ipynb_checkpoints/: environment-checkpoint.yml  readme-checkpoint.md  requirements-checkpoint.txt  train-checkpoint.py
ByteTrack/tools/: demo_track_frome_detdtxt.py
ByteTrack/yolox/exp/: base_exp.py
ByteTrack/yolox/tracker/: byte_tracker_copy.py  matching.py
DanceTrack/TrackEval/: error_log.txt
SAM2/: demo.py  test.py
SAM2/.ipynb_checkpoints/: demo-checkpoint.py  setup-checkpoint.py  test-checkpoint.py
SAM2/sam2/: build_sam.py  sam2_image_predictor.py
SAM2/sam2/.ipynb_checkpoints/: build_sam-checkpoint.py
SAM2/sam2/utils/: transforms.py
VideoDepthAnything/: __init__.py  get_weights.sh
VideoDepthAnything/video_depth_anything/: dinov2.py  dpt_temporal.py  video_depth.py
configs/.ipynb_checkpoints/: runtime-checkpoint.yml
configs/dataset/.ipynb_checkpoints/: custom_detection-checkpoint.yml
configs/dfine/include/: dataloader.yml  dfine_hgnetv2.yml
src/core/: _config.py  yaml_config.py
src/data/: dataloader.py  dataloader_eval_single.py
src/data/.ipynb_checkpoints/: __init__-checkpoint.py
src/data/dataset/: coco_dataset.py  coco_eval.py  coco_utils.py
src/data/transforms/: _transforms.py
src/misc/: profiler_utils.py
src/misc/.ipynb_checkpoints/: dist_utils-checkpoint.py
src/solver/: _solver.py  det_engine.py  det_solver.py  utils.py  utils_eval_loader.py
tools/inference/cppExample/trt/: CMakeLists.txt  trtExample.cpp
(+23 files in other folders)
